# tap-databricks

./: .env.example  .gitignore  README.md  meltano.yml  pyproject.toml
.github/workflows/: build.yml  run-zizmor.yml  test.yml
tap_databricks/: __init__.py  __main__.py  client.py  tap.py
tests/: __init__.py  test_core.py  test_discovery_mock.py
tests/fixtures/: test_catalog.json.example
