[build-system]
requires = [
    "hatchling>=1,<2",
    "hatch-vcs>=0.5",
]
build-backend = "hatchling.build"

[project]
name = "tap-databricks"
dynamic = ["version"]
description = "Singer tap for Databricks, built with the Meltano Singer SDK."
readme = "README.md"
authors = [{ name = "Dron Adhikari", email = "drona6985@gmail.com" }]
maintainers = [{ name = "Dron Adhikari", email = "drona6985@gmail.com" }]
keywords = [
    "ELT",
    "Databricks",
]
classifiers = [
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
license = "Apache-2.0"
license-files = [ "LICENSE" ]
requires-python = ">=3.10"
dependencies = [
    "databricks-sdk>=0.115.0",
    "databricks-sqlalchemy>=2.0.9",
    "singer-sdk~=0.54.4",
    "sqlalchemy~=2.0.36",
    "typing-extensions>=4.5.0; python_version < '3.13'",
]

[project.urls]
Homepage = "https://github.com/MeltanoLabs/tap-databricks"
Repository = "https://github.com/MeltanoLabs/tap-databricks"
Issues = "https://github.com/MeltanoLabs/tap-databricks/issues"

[project.optional-dependencies]
s3 = [
    "s3fs>=2026.6.0",
]

[project.scripts]
# CLI declaration
tap-databricks = 'tap_databricks.tap:TapDatabricks.cli'

[dependency-groups]
dev = [
    { include-group = "test" },
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
]
test = [
    "pytest>=9",
    "pytest-github-actions-annotate-failures>=0.4",
    "singer-sdk[testing]",
]
typing = [
    "mypy>=2.1",
    "ty>=0.0.41",
]

[tool.hatch.version]
fallback-version = "0.1.0.dev0"
source = "vcs"

[tool.mypy]
enable_error_code = [
    "ignore-without-code",
    "redundant-expr",
    "truthy-bool",
]
warn_redundant_casts = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.ty.rules]
missing-override-decorator = "error"
unused-type-ignore-comment = "ignore"

[tool.pytest.ini_options]
addopts = [
    "-ra",
]
filterwarnings = [
    "error",
    "once:No records were available to test:UserWarning",
    "once:Fields in transformed catalog but not in records:UserWarning",
]
log_level = "INFO"
minversion = "9"
strict = true
testpaths = [
    "tests",
]

[tool.ruff]
line-length = 100
required-version = ">=0.15"

[tool.ruff.lint]
future-annotations = true
ignore = [
    "COM812",  # missing-trailing-comma
]
select = ["ALL"]

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
  "S101",  # assert is used by pytest
]

[tool.ruff.lint.pydocstyle]
convention = "google"

# This configuration can be used to customize tox environments
[tool.tox]
requires = [
    "tox>=4.53",
    "tox-uv>=1.35",
]
env_list = [
    "typing",
    { prefix = "3.", start = 10 },
]

[tool.tox.env_run_base]
description = "run tests on Python {env_name}"
runner = "uv-venv-lock-runner"
pass_env = [
    "CI",
    "GITHUB_*",
    "TAP_DATABRICKS_*",
]
dependency_groups = [ "test" ]
commands = [ [ "pytest", { replace = "posargs", default = [ "tests" ], extend = true } ] ]

[tool.tox.env.typing]
description = "type checks"
dependency_groups = [ "test", "typing" ]
commands = [
    [ "mypy", { replace = "posargs", default = [ "tap_databricks", "tests" ], extend = true } ],
    [ "ty", "check", { replace = "posargs", default = [ "tap_databricks", "tests" ], extend = true } ],
]
